salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_QuoteType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_QuoteType__c</fullName>
    <defaultValue>$RecordType.DeveloperName</defaultValue>
    <label>Tipo de registro de oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSFMX_OfertaGas</fullName>
                <label>Gas</label>
            </value>
            <value>
                <fullName>OSFMX_OfertaElectricidad</fullName>
                <label>Electricidad</label>
            </value>
            <value>
                <fullName>OSFMX_Soluciones</fullName>
                <label>Otras Soluciones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>