salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Rango_comercializaci_n__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Rango_comercializaci_n__c</fullName>
    <label>Rango comercialización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>