salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ReceptionNode1__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReceptionNode1__c</fullName>
    <label>Nodo Recepción 1- Nodo Entrega 1-CMD 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>