salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ReceptionNode2__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReceptionNode2__c</fullName>
    <label>Nodo Recepción 2- Nodo Entrega 2-CMD 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>