salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ReceptionNode3__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReceptionNode3__c</fullName>
    <label>Nodo Recepción 3- Nodo Entrega 3-CMD 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>