salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_RejectedDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RejectedDate__c</fullName>
    <label>Fecha de rechazo</label>
    <type>Date</type>
</CustomField>