salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_RequestedVolumeGjYear__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RequestedVolumeGjYear__c</fullName>
    <formula>Opportunity.OSFMX_ExpConsGjByYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volumen Solicitado (Gj/año)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>