salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_RequestInReviewByGasTeam__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RequestInReviewByGasTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud de revisión aprobada por gas</label>
    <type>Checkbox</type>
</CustomField>