salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_RequestReviewNotesByGas__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RequestReviewNotesByGas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud de Revisión-Observaciones Gas</label>
    <type>Checkbox</type>
</CustomField>