salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ResponsibleUserGas__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ResponsibleUserGas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para anotar el responsable de usuarios de gas</description>
    <label>Responsable Usuario Oferta de Gas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>