salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_RevieApprovedByGasTransport__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RevieApprovedByGasTransport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisión Aprobada Por Transporte Gas</label>
    <type>Checkbox</type>
</CustomField>