salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ReviewApprovedByMolecule__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReviewApprovedByMolecule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisión Aprobada Por Molecula</label>
    <type>Checkbox</type>
</CustomField>