salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ReviewByGasTransport__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReviewByGasTransport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Revisión por Transporte Gas</label>
    <type>Checkbox</type>
</CustomField>