salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_RevisionNecesaria__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RevisionNecesaria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para estados de procesos de aprobación de presupuestos.</description>
    <inlineHelpText>La aprobación tiene observaciones porque fue rechazada.</inlineHelpText>
    <label>Revisión Necesaria</label>
    <type>Checkbox</type>
</CustomField>