salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SAPBPID__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SAPBPID__c</fullName>
    <formula>Opportunity.Account.OSFMX_AccountContractID__c</formula>
    <label>SAP BP ID</label>
    <type>Text</type>
</CustomField>