salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SendOfferDay__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SendOfferDay__c</fullName>
    <label>Feche envio de Oferta</label>
    <type>Date</type>
</CustomField>