salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SendtoReview__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SendtoReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar para revisión a Gas</label>
    <type>Checkbox</type>
</CustomField>