salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SentReviewtoMolecule__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SentReviewtoMolecule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar para revisión a molécula</label>
    <type>Checkbox</type>
</CustomField>