salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SentReviewtoTransport__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SentReviewtoTransport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar para revisión a transporte</label>
    <type>Checkbox</type>
</CustomField>