salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServiceEndDate__c</fullName>
    <label>Fecha fin del servicio</label>
    <type>Date</type>
</CustomField>