salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServiceStartDate__c</fullName>
    <label>Fecha de inicio del servicio</label>
    <type>Date</type>
</CustomField>