salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SolutionType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SolutionType__c</fullName>
    <label>Tipo de solución</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comercialización de Gas Natural</fullName>
            </value>
            <value>
                <fullName>Corporate PPA</fullName>
            </value>
            <value>
                <fullName>MexCom</fullName>
            </value>
            <value>
                <fullName>Distribución de Gas Natural</fullName>
            </value>
            <value>
                <fullName>Ducto Dedicado</fullName>
            </value>
            <value>
                <fullName>Eficiencia Energética</fullName>
            </value>
            <value>
                <fullName>Generación Onsite</fullName>
            </value>
            <value>
                <fullName>GNC</fullName>
            </value>
            <value>
                <fullName>GNV</fullName>
            </value>
            <value>
                <fullName>Instalación</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Movilidad Eléctrica</fullName>
            </value>
            <value>
                <fullName>Suministro Eléctrico MX</fullName>
            </value>
            <value>
                <fullName>Suministro Eléctrico Latam</fullName>
            </value>
            <value>
                <fullName>Soluciones</fullName>
            </value>
            <value>
                <fullName>Transmisión</fullName>
            </value>
            <value>
                <fullName>Gas Chile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>