salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SpecialConsideration__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SpecialConsideration__c</fullName>
    <label>Condición especial a considerar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>