salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Specify__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Specify__c</fullName>
    <label>Especifique</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>