salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Spread_BC_excedente_USD_Gj__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Spread_BC_excedente_USD_Gj__c</fullName>
    <label>Spread BC excedente USD Gj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>