salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Spread_piso_por_cuadrante__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Spread_piso_por_cuadrante__c</fullName>
    <label>Spread piso por cuadrante</label>
    <length>40</length>
    <type>Text</type>
</CustomField>