salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_StatusTransportApprove__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StatusTransportApprove__c</fullName>
    <formula>IMAGE(
IF(OSFMX_RevieApprovedByGasTransport__c= TRUE,
&quot;/servlet/servlet.ImageServer?id=015c00000012lPR&amp;oid=00Dc0000003wiic&amp;lastMod=1613410090000&quot;,
IF(OSFMX_ReviewByGasTransport__c= TRUE,
&quot;/servlet/servlet.ImageServer?id=015c00000012lPW&amp;oid=00Dc0000003wiic&amp;lastMod=1613410123000&quot;,
IF(OSFMX_ObservationsReviewByGasTransport__c = TRUE,
&quot;/servlet/servlet.ImageServer?id=015c00000012lPb&amp;oid=00Dc0000003wiic&amp;lastMod=1613410149000&quot;,
NULL))),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado aprobación transporte</label>
    <type>Text</type>
</CustomField>