salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SubEstatus__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SubEstatus__c</fullName>
    <label>Sub estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Solicitud</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Autorización</fullName>
            </value>
            <value>
                <fullName>Producto (Oferta con observaciones)</fullName>
            </value>
            <value>
                <fullName>Factibilidad Mexcom</fullName>
            </value>
            <value>
                <fullName>Factibilidad eléctrica</fullName>
            </value>
            <value>
                <fullName>Factibilidad distribución</fullName>
            </value>
            <value>
                <fullName>Factibilidad ducto dedicado</fullName>
            </value>
            <value>
                <fullName>Factibilidad otras soluciones</fullName>
            </value>
            <value>
                <fullName>Aprobación</fullName>
            </value>
            <value>
                <fullName>Factibilidad imposible</fullName>
            </value>
            <value>
                <fullName>Producto imposible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>