salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SupplyStartDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SupplyStartDate__c</fullName>
    <label>Fecha de inicio del suministro</label>
    <type>Date</type>
</CustomField>