salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_SyncQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SyncQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sincronizada</label>
    <type>Checkbox</type>
</CustomField>