salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TaxRate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TaxRate__c</fullName>
    <label>Tasa de Interés (Conexión)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>