salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TeamsGasRequestReview__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TeamsGasRequestReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud de revisión enviada a Gas</label>
    <type>Checkbox</type>
</CustomField>