salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TimeLimitSupply__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TimeLimitSupply__c</fullName>
    <label>Plazo de suministro</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>