salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TipoVolatilidadMaster__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TipoVolatilidadMaster__c</fullName>
    <label>TipoVolatilidadMaster</label>
    <length>100</length>
    <type>Text</type>
</CustomField>