salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TotalEnergy__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TotalEnergy__c</fullName>
    <label>Energía total</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>