salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TotalPower__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TotalPower__c</fullName>
    <label>Potencia total</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>