salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TransportValidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TransportValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación Transporte</label>
    <type>Checkbox</type>
</CustomField>