salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TxtVolatilidadMaster__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TxtVolatilidadMaster__c</fullName>
    <label>TxtVolatilidadMaster</label>
    <length>100</length>
    <type>Text</type>
</CustomField>