salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_TypeGuaranteeRequested__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TypeGuaranteeRequested__c</fullName>
    <label>Tipo de garantía solicitada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carta de crédito</fullName>
            </value>
            <value>
                <fullName>Fianza</fullName>
            </value>
            <value>
                <fullName>Garantía corporativa</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>