salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_UserTransport__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_UserTransport__c</fullName>
    <defaultValue>&quot;Usuario de Transporte&quot;</defaultValue>
    <label>Usuario de transporte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Usuario de Transporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>