salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ValidationstatusPPVinculante__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ValidationstatusPPVinculante__c</fullName>
    <formula>IF(AND(ISPICKVAL(Opportunity.OSFMX_OpportunityType__c,'OSFMX_Gas'),
ISPICKVAL(Status,'Proceso'), 
ISPICKVAL(OSFMX_SubEstatus__c, 'Producto'), 
ISPICKVAL( OSFMX_OfferType__c,'Vinculante'), 
RecordType.DeveloperName= 'MasterQuote'), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValidacionEstadoPPVinculante</label>
    <type>Checkbox</type>
</CustomField>