salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_VoluntaryContribution__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_VoluntaryContribution__c</fullName>
    <label>Aportación voluntaria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>