salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_VPApproverName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_VPApproverName__c</fullName>
    <formula>IF (AND(OSFMX_GwhYear__c &gt;= 0, OSFMX_GwhYear__c &lt;= 200), &quot;María Sierra / Julien Quainon&quot;,
IF (AND(OSFMX_GwhYear__c &gt;= 201, OSFMX_GwhYear__c &lt;= 5000), &quot;Julien Quainon / María Sierra&quot;,
IF (OSFMX_GwhYear__c &gt;= 5001, &quot;Lorena Ilicic&quot;,
&quot;&quot;)))</formula>
    <label>Nombre VP Aprobador</label>
    <type>Text</type>
</CustomField>