salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_VPsAprovalDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_VPsAprovalDate__c</fullName>
    <label>Fecha Aprobación VP&apos;s</label>
    <type>DateTime</type>
</CustomField>