salesforce_sfdx/main/default/objects/Quote/fields/OSFMXBillingAccCreated__c.field-meta.xml
<CustomField>
    <fullName>OSFMXBillingAccCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BillingAccCreated</label>
    <type>Checkbox</type>
</CustomField>