salesforce_sfdx/main/default/objects/Quote/fields/OSFMXGarantiaMoleculaTrans__c.field-meta.xml
<CustomField>
    <fullName>OSFMXGarantiaMoleculaTrans__c</fullName>
    <formula>OSMXConsumo_Plazo__c*(Garantia_Costo_Molecula_estimado__c + IF (ISBLANK(OSFMX_GasTransportPrice__c), 0,OSFMX_GasTransportPrice__c))</formula>
    <label>GarantiaMoleculaTrans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>