salesforce_sfdx/main/default/objects/Quote/fields/OSFMXSpreadAvoidCurrenSymbol__c.field-meta.xml
<CustomField>
    <fullName>OSFMXSpreadAvoidCurrenSymbol__c</fullName>
    <formula>OSFMX_Spread_ofertado_USD_Gj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spread ofertado Avoid Curren Symbol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>