salesforce_sfdx/main/default/objects/Quote/fields/OSFMXUsoCapacidad__c.field-meta.xml
<CustomField>
    <fullName>OSFMXUsoCapacidad__c</fullName>
    <formula>(OSFMX_TimeLimitSupply__c/12)*(OSFMX_Maximumdailycapacity__c*365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UsoCapacidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>