salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Aprobaciones_Politica_Comerc__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Aprobaciones_Politica_Comerc__c</fullName>
    <label>Aprobaciones (Política Comercial)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directorio de EEP y Grupo Engie</fullName>
            </value>
            <value>
                <fullName>Directorio de EEP y a decisión del Director Ejecutivo la BU CC</fullName>
            </value>
            <value>
                <fullName>Director Ejecutivo más un (1) Apoderado Clase A o dos (2) Apoderados Clase A</fullName>
            </value>
            <value>
                <fullName>Vicepresidente Comercial y Gerente de Ventas y Gestión de Clientes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>