salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Indexacion_precio_de_energia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Indexacion_precio_de_energia__c</fullName>
    <label>Indexación precio de energía</label>
    <length>100</length>
    <type>Text</type>
</CustomField>