salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Indexacion_precio_de_potencia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Indexacion_precio_de_potencia__c</fullName>
    <label>Indexación precio de potencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>