salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Plazo_de_pago_dias__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Plazo_de_pago_dias__c</fullName>
    <label>Plazo de pago (días)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>