salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Plazo_del_Suministro_Anos__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Plazo_del_Suministro_Anos__c</fullName>
    <formula>( OSFMX_EndDateSupply__c - OSFMX_SupplyStartDate__c ) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo del Suministro (Años)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>