salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Plazo_del_Suministro_Meses__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Plazo_del_Suministro_Meses__c</fullName>
    <formula>( ( OSFMX_EndDateSupply__c  - OSFMX_SupplyStartDate__c ) / 365 ) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo del Suministro (Meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>