salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Potencia_minima_facturable__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Potencia_minima_facturable__c</fullName>
    <label>Potencia mínima facturable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>