salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_potenciaMaximaOferta__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_potenciaMaximaOferta__c</fullName>
    <label>Potencia máxima de la Oferta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>