salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Precio_monomico_ponderado__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Precio_monomico_ponderado__c</fullName>
    <label>Precio monómico ponderado (USD/MWh)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>