salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Ref_precios_e_indexadores__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Ref_precios_e_indexadores__c</fullName>
    <label>Ref. precios e indexadores</label>
    <type>Date</type>
</CustomField>