salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Tipo_de_proceso__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Tipo_de_proceso__c</fullName>
    <label>Tipo de proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast track</fullName>
            </value>
            <value>
                <fullName>Ágil</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>