salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Unidades_Precio_Energia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Unidades_Precio_Energia__c</fullName>
    <label>Unidades Precio Energía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/MWh</fullName>
            </value>
            <value>
                <fullName>ctm PEN/kWh</fullName>
            </value>
            <value>
                <fullName>S/./MWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>