salesforce_sfdx/main/default/objects/Quote/fields/OSFPE_fld_Unidades_Precio_Potencia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Unidades_Precio_Potencia__c</fullName>
    <description>Ingrese el tipo de moneda</description>
    <inlineHelpText>Ingrese el tipo de moneda</inlineHelpText>
    <label>Unidades Precio Potencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/kW-mes</fullName>
            </value>
            <value>
                <fullName>PEN/kW-mes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>