salesforce_sfdx/main/default/objects/Quote/fields/OSMFX_CorreoOfertaGasProcesoA__c.field-meta.xml
<CustomField>
    <fullName>OSMFX_CorreoOfertaGasProcesoA__c</fullName>
    <description>Se guarda correo del usuario que cambia la oferta a Proceso Autorización</description>
    <label>CorreoOfertaGasProcesoA</label>
    <type>Email</type>
</CustomField>