salesforce_sfdx/main/default/objects/Quote/fields/OSMFX_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>OSMFX_RejectionReason__c</fullName>
    <label>Motivo de rechazo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>