salesforce_sfdx/main/default/objects/Quote/fields/OSMXConsumo_Plazo__c.field-meta.xml
<CustomField>
    <fullName>OSMXConsumo_Plazo__c</fullName>
    <formula>OSFMX_GJ__c*(OSFMX_Plazo_suministro_Gas__c/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo Plazo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>