salesforce_sfdx/main/default/objects/Quote/fields/Validez_de_la_oferta__c.field-meta.xml
<CustomField>
    <fullName>Validez_de_la_oferta__c</fullName>
    <label>Validez de la oferta (días hábiles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>