salesforce_sfdx/main/default/objects/Quote/recordTypes/Draft.recordType-meta.xml
<RecordType>
    <fullName>Draft</fullName>
    <active>true</active>
    <label>Borrador</label>
</RecordType>