salesforce_sfdx/main/default/objects/Quote/recordTypes/Oferta_Energia_Chile.recordType-meta.xml
<RecordType>
    <fullName>Oferta_Energia_Chile</fullName>
    <active>true</active>
    <label>Oferta Energía Chile</label>
</RecordType>