salesforce_sfdx/main/default/objects/Quote/recordTypes/Oferta_Energia_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Oferta_Energia_Colombia</fullName>
    <active>true</active>
    <label>Oferta Energía Colombia</label>
</RecordType>