salesforce_sfdx/main/default/objects/Quote/recordTypes/Oferta_Gas_Chile.recordType-meta.xml
<RecordType>
    <fullName>Oferta_Gas_Chile</fullName>
    <active>true</active>
    <label>Oferta Gas Chile</label>
</RecordType>