salesforce_sfdx/main/default/objects/Quote/recordTypes/Oferta_Soluciones_Chile.recordType-meta.xml
<RecordType>
    <fullName>Oferta_Soluciones_Chile</fullName>
    <active>true</active>
    <label>Oferta Soluciones Chile</label>
</RecordType>