salesforce_sfdx/main/default/objects/Quote/recordTypes/Oferta_Soluciones_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Oferta_Soluciones_Colombia</fullName>
    <active>true</active>
    <label>Oferta Soluciones Colombia</label>
</RecordType>