salesforce_sfdx/main/default/objects/Quote/recordTypes/OSFMX_OfertaElectricidad.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_OfertaElectricidad</fullName>
    <active>true</active>
    <label>Oferta de Electricidad</label>
</RecordType>