salesforce_sfdx/main/default/objects/Quote/recordTypes/OSFMX_OfertaGas.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_OfertaGas</fullName>
    <active>true</active>
    <label>Oferta de Gas</label>
</RecordType>