salesforce_sfdx/main/default/objects/Quote/recordTypes/OSFMX_Soluciones.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_Soluciones</fullName>
    <active>true</active>
    <label>Otras Soluciones</label>
</RecordType>