salesforce_sfdx/main/default/objects/Quote/recordTypes/OSFPE_rt_Oferta_Energia_Peru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Oferta_Energia_Peru</fullName>
    <active>true</active>
    <label>Oferta Energía Peru</label>
</RecordType>